--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.level.org.hibernate=error
 
 # output to a file
 logging.file=app.log
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
