--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/zen_pack
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5433/zenfra
+#spring.datasource.driver-class-name= com.postgresql.jdbc.Driver
+spring.datasource.username=postgres
+spring.datasource.password=root
+server.port=8090
 
 
 
