--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5433/zenfra
-#spring.datasource.driver-class-name= com.postgresql.jdbc.Driver
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/zenfra
+spring.datasource.username=root
 spring.datasource.password=root
-server.port=8090
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = update
+jdbc.lob.non_contexual_creation=true
+#server.port=8090
 
 
 
