--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ logging.level.org.hibernate=error
 logging.file=app.log
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
+spring.http.converters.preferred-json-mapper=gson
