--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.6.11.Final</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>5.3.23</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
