--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/zenfra?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto = update
-jdbc.lob.non_contexual_creation=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/zenfra?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto = update
+#jdbc.lob.non_contexual_creation=true
 #server.port=8090
 
 
 
 
 # logging level
-logging.level.org.springframework.web=debug
-logging.level.org.hibernate=error
+#logging.level.org.springframework.web=debug
+#logging.level.org.hibernate=error
 
 # output to a file
 logging.file=app.log
