--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@
 
 
 # logging level
-#logging.level.org.springframework.web=debug
-#logging.level.org.hibernate=error
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=error
 
 # output to a file
 logging.file=app.log
