--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,14 @@
 #jdbc.lob.non_contexual_creation=true
 #server.port=8090
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/zenfra
+spring.datasource.username=postgres
+spring.datasource.password=admin
+server.port=8091
+
 
 
 
