--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,9 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/zenfra?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto = update
-#jdbc.lob.non_contexual_creation=true
-#server.port=8090
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/zenfra
+spring.datasource.url=jdbc:postgresql://164.52.193.5:5432/metnewdb
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=p77iqneWx8T
 server.port=8091
 
 
