--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>zen-pack</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
