--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.show-sql=true
-#spring.datasource.url=jdbc:postgresql://164.52.193.5:5432/metnewdb
-#spring.datasource.username=postgres
-#spring.datasource.password=p77iqneWx8T
+#spring.datasource.url=${postgresurl}
+#spring.datasource.username=${postgres_user}
+#spring.datasource.password=${postgres_pwd}
 #server.port=8091
 
 
