--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,16 @@
 #spring.datasource.username=${postgres_user}
 #spring.datasource.password=${postgres_pwd}
 #server.port=8091
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=${postgresurl}
+spring.datasource.username=${postgres_user}
+spring.datasource.password=${postgres_pwd}
+server.port=8091
+spring.datasource.hikari.connectionTimeout=30000 
+spring.datasource.hikari.idleTimeout=600000 
+spring.datasource.hikari.maxLifetime=1800000 
 
 
 
