--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.username=${postgres_user}
 #spring.datasource.password=${postgres_pwd}
 #server.port=8091
-#server.servlet.contextPath=/zen-pack
+server.servlet.contextPath=/zen-pack
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
