--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000 
 spring.datasource.hikari.maxLifetime=1800000 
 
-
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # logging level
 logging.level.org.springframework.web=debug
