application.properties edited online with Bitbucket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.password=${postgres_pwd}
 spring.datasource.hikari.connectionTimeout=30000 
 spring.datasource.hikari.idleTimeout=600000 
 spring.datasource.hikari.maxLifetime=1800000 
-
+#Remove this after table structure is set
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # logging level
