--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.19</version>
 		</dependency>
+      <dependency>
+   		 <groupId>com.vladmihalcea</groupId>
+    	<artifactId>hibernate-types-52</artifactId>
+   		<version>2.19.2</version>
+	  </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
