--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.19</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.6.0</version>
+		</dependency>
       <dependency>
    		 <groupId>com.vladmihalcea</groupId>
     	<artifactId>hibernate-types-52</artifactId>
